--- a/email-templates/wire instructions email.html
+++ b/email-templates/wire instructions email.html
@@ -87,7 +87,7 @@
                         Your order has been successfully submitted!
                     </strong>
                     <p style="color:rgb(255, 255, 255); line-height:1.5; text-align:center; margin:0">
-                        Please follow the instructions below to send funds. As soon as ODT Inc. (On-Demand Trading) receives your payment, we will reach out and be able to process your order.
+                        Please follow the instructions below to send funds. As soon as On-Demand Trading receives your payment, we will reach out and be able to process your order.
                     </p>
                 </td>
             </tr>
