--- a/email-templates/Getting Started - New.html
+++ b/email-templates/Getting Started - New.html
@@ -75,76 +75,51 @@
                             style="display:block; margin:0 auto; max-width:100%">
                         <h1
                             style="color:rgb(255, 255, 255); font-size: 24px; font-weight:bold; line-height:1.25; text-align:center; margin:0">
-                            Hello <br><span class="responsive-text" style="color:rgb(221, 184, 66)">${Contacts.First Name}</span>
+                            Getting Started <br><span class="responsive-text" style="color:rgb(221, 184, 66)">With
+                                Us</span>
                         </h1>
                     </td>
                 </tr>
                 <tr>
                     <td align="center" class="responsive-padding" style="background-color:rgb(52, 52, 52)">
-                        <p style="color:rgb(255, 255, 255); line-height:1.5; text-align:center; margin:0">
-                            This is ${Contacts.Contact Owner}, your Dedicated Account Manager for On-Demand Trading.
-                        </p>
-                        <p
-                            style="color:rgb(221, 184, 66); font-weight:bold; line-height:1.5; text-align:center; margin:20px 0">
-                            Thank you for choosing us for your trading needs.
-                        </p>
-                        <p style="color:rgb(255, 255, 255); line-height:1.5; text-align:center; margin:0">
-                            To ensure a smooth and efficient transaction, I would like to outline the steps involved in
-                            our trading process:
-                        </p>
+                        <p>Hello $(Leads.First Name),</p> <br> <br>
+                        <p>Thank you for your interest in Bitcoin by wire with On-Demand Trading! (Other
+                            cryptocurrencies available by request)</p> <br> <br>
+                        <strong style="text-align: center; color: #DDB842;">OUR PROMISE</strong> <br> <br>
+                        <strong>Same-day settlement</strong> <br>
+                        <strong>No holding periods</strong> <br>
+                        <strong>No transaction limits</strong> <br> <br>
+                        <p style="text-align: center;">And we will beat any other comparable Trade Desk/OTC Services
+                            pricing. We directly source cryptocurrency from reputable, low-cost providers and have no
+                            hidden fees.</p><br> <br>
+                        <strong style="text-align: center;">We’re excited to be your go-to cryptocurrency trading
+                            partner.</strong>
+                    </td>
+                </tr>
+                <tr>
+                    <td align="center" class="responsive-padding" style="background-color:rgb(77, 77, 77)">
+                        <strong style="color: #DDB842;">The process is simple, submit your application on our page,
+                            here:</strong> <br> <br>
+
+                        <a href="https://www.ondemandtrading.com/register">www.ondemandtrading.com/register</a> <br> <br>
+
+                        <p>Once you are approved, you will receive instructions via email & text message on how to trade
+                            with us.</p>
                     </td>
                 </tr>
                 <tr>
                     <td align="left" class="responsive-padding" style="background-color:rgb(52, 52, 52)">
-                        <ol style="color:rgb(255, 255, 255); line-height:1.75; margin:0; padding-left:20px">
-                            <li style="margin-bottom:16px">
-                                <span style="font-weight:bold; color:rgb(221, 184, 66)">Trade Request Form:</span>
-                                Please begin by filling out the trade request form. This document captures all the
-                                necessary details to initiate your transaction. You may submit your trade request by
-                                clicking the button below:
-                                <a target="_blank" href="https://forms.zohopublic.com/cryptofi/form/TradeDeskTransactionRequestForm/formperma/4EbimzjOORvvXxWzVzrXJA2BG9ZeIv645qjo3CpNA-Q"
-                                    style="display:block; margin:16px auto 0; background-color:rgb(221, 184, 66); color:rgb(52, 52, 52); font-weight:bold; border:none; border-radius:9999px; padding:10px 20px;">Create
-                                    New Trade Request</a>
-                            </li>
-                            <li style="margin-bottom:16px"><span
-                                    style="font-weight:bold; color:rgb(221, 184, 66)">Receiving Wire
-                                    Instructions:</span> Once we have your completed trade request form, we will send
-                                you the wire instructions for transferring funds.</li>
-                            <li style="margin-bottom:16px"><span
-                                    style="font-weight:bold; color:rgb(221, 184, 66)">Initiate Wire Transfer:</span> You
-                                will need to contact your bank to initiate the wire transfer according to the
-                                instructions provided.</li>
-                            <li style="margin-bottom:16px"><span
-                                    style="font-weight:bold; color:rgb(221, 184, 66)">Confirmation of Receipt:</span>
-                                After initiating the wire, there will be a waiting period while we confirm receipt of
-                                the funds.</li>
-                            <li style="margin-bottom:16px"><span
-                                    style="font-weight:bold; color:rgb(221, 184, 66)">Purchase Order Details:</span>
-                                Upon confirmation that we have received the wire, our trading team will send you an
-                                email with the details of the purchase order.</li>
-                            <li style="margin-bottom:16px"><span
-                                    style="font-weight:bold; color:rgb(221, 184, 66)">Confirmation or
-                                    Declination:</span> You will need to review the purchase order and either confirm or
-                                decline the offer based on your assessment.</li>
-                            <li><span style="font-weight:bold; color:rgb(221, 184, 66)">Execution of Transaction:</span>
-                                If you confirm the offer, our trading team will execute the transaction and send the
-                                coins to your designated wallet in a timely fashion.</li>
-                        </ol>
-                    </td>
-                </tr>
-                <tr>
-                    <td align="center" class="responsive-padding" style="background-color:rgb(52, 52, 52)">
-                        <p style="color:rgb(255, 255, 255); line-height:1.5; text-align:center; margin:0">
-                            We are committed to providing a transparent and efficient service. Please feel free to reach
-                            out if you have any questions or need further clarification on any of the steps mentioned
-                            above.
-                        </p>
-                        <p style="color:rgb(255, 255, 255); line-height:1.5; text-align:center; margin:20px 0">
-                            Thank you for your cooperation and trust in us. We look forward to facilitating your
-                            transactions.
-                        </p>
-                        <p style="color:rgb(255, 255, 255); line-height:1.5; text-align:left; margin:0">
-                            Best Regards, <br>${Contacts.Contact Owner}</p>
+                        <p><strong style="color: #DDB842;">If you are buying with us,</strong> you must transfer the
+                            funds from your bank account.</p> <br>
+                        <p>On-Demand Trading will execute your order at market price after you confirm your transaction
+                            and send your wallet the corresponding amount of crypto, minus any fees.</p> <br>
+                        <p><strong style="color: #DDB842;">If you are selling with us,</strong> you must transfer the
+                            cryptocurrency sold to our wallet. Please reach out to us for more information.</p> <br>
+                        <p>As an On-Demand Trading client, you have access to trading cryptocurrencies at the best
+                            prices. Our expert team is ready to support you at every step of the way – from your initial
+                            consultation to registration through the entirety of the trade process.</p> <br>
+                        <strong style="text-align: center; margin: 0 auto;">Our team is available for trades Monday
+                            through Friday from 9:00 AM to 6:00 PM CST.</strong>
                     </td>
                 </tr>
                 <tr>
@@ -198,9 +173,9 @@
                 </tr>
                 <tr>
                     <td align="left" class="responsive-padding" style="background-color:rgb(195, 194, 193)">
-                        <p style="color:rgb(0, 0, 0); line-height:1.5;">
+                        <p style="color:rgb(0, 0, 0); line-height:1.5; text-align:center; margin:0">
                             By sending a text message to the number above, you agree to <strong
-                                style="color: black;">On-Demand Trading's SMS
+                                style="color: #000000;">On-Demand Trading's SMS
                                 Terms and Conditions.</strong> All text message and data rates apply.
                         </p>
                         <a style="margin-top: 44px;"
@@ -210,8 +185,7 @@
                                 style="line-height: 13px">
                         </a>
                         <p style="color:rgb(0, 0, 0); line-height:1.5; text-align:left; margin:20px 0">
-                            <strong style="color: black;">CONFIDENTIALITY STATEMENT:</strong> This e-mail and any
-                            attachments are intended
+                            <strong>CONFIDENTIALITY STATEMENT:</strong> This e-mail and any attachments are intended
                             only for those to which it is addressed and may contain information which is privileged,
                             confidential and prohibited from disclosure and unauthorized use under applicable law. If
                             you are not the intended recipient of this e-mail, you are hereby notified that any use,
