--- a/email-templates/NEW-ODT-LOGO-APPROVAL.html
+++ b/email-templates/NEW-ODT-LOGO-APPROVAL.html
@@ -73,11 +73,9 @@
                     <td align="center" class="responsive-padding" style="background-color: black;">
                         <img style="width: 80%; margin-bottom: 64px;" src="https://i.imgur.com/WqmO3B1.png" alt=""
                             style="display:block; margin:0 auto; max-width:100%">
-                        <h1
-                            style="color:rgb(255, 255, 255); font-size: 24px; font-weight:bold; line-height:1.25; text-align:center; margin:0">
-                            Congratulations <br><span class="responsive-text"
-                                style="color:rgb(221, 184, 66)">${Contacts.Lead Source}</span>
-                        </h1>
+
+                        <img style="width: 50%;" src="https://imgur.com/erbdy8u.png" alt="">
+                        <h1 class="responsive-text" style="color:rgb(221, 184, 66)">${Contacts.Lead Source}</h1></h1>
                     </td>
                 </tr>
                 <tr>
