--- a/email-templates/NEW-ODT-LOGO-APPROVAL.html
+++ b/email-templates/NEW-ODT-LOGO-APPROVAL.html
@@ -19,6 +19,9 @@
             .responsive-text {
                 font-size: 24px !important
             }
+            .responsive-text-image {
+                width: 70%;
+            }
         }
 
         @media all and (min-width: 769px) {
@@ -34,6 +37,9 @@
 
             .responsive-text {
                 font-size: 44px !important
+            }
+            .responsive-text-image {
+                width: 50%;
             }
         }
 
@@ -74,8 +80,8 @@
                         <img style="width: 80%; margin-bottom: 64px;" src="https://i.imgur.com/WqmO3B1.png" alt=""
                             style="display:block; margin:0 auto; max-width:100%">
 
-                        <img style="width: 50%;" src="https://imgur.com/erbdy8u.png" alt="">
-                        <h1 class="responsive-text" style="color:rgb(221, 184, 66)">${Contacts.Lead Source}</h1></h1>
+                        <img class="responsive-text-image" src="https://imgur.com/erbdy8u.png" alt="">
+                        <h1 class="responsive-text" style="color:rgb(221, 184, 66)">${Contacts.Lead Source}</h1>
                     </td>
                 </tr>
                 <tr>
@@ -86,7 +92,7 @@
                             <strong>You may now begin trading with us!</strong>
                         </p>
                         <a target="_blank" href="https://forms.zohopublic.com/cryptofi/form/TradeDeskTransactionRequestForm/formperma/4EbimzjOORvvXxWzVzrXJA2BG9ZeIv645qjo3CpNA-Q"
-                            style="background-color:rgb(221, 184, 66); color:rgb(52, 52, 52); font-weight:600; border:none; border-radius:9999px; padding:8px 28px; margin-top:24px; display:inline-block; max-width:320px; width:100%">
+                            style="text-decoration: none; background-color:rgb(221, 184, 66); color:rgb(52, 52, 52); font-weight:600; border:none; border-radius:9999px; padding:8px 28px; margin-top:24px; display:inline-block; max-width:320px; width:100%">
                             Trade Now
                         </a>
                     </td>
@@ -105,7 +111,7 @@
                             <strong>For more information about our referral program visit</strong>
                         </p>
                         <a target="_blank" href="https://ondemandtrading.com/crypto-referral-program/"
-                            style="background-color:rgb(255, 255, 255); color:rgb(52, 52, 52); text-transform:uppercase; font-weight:600; border:none; border-radius:9999px; padding:8px 28px; margin-top:24px; display:inline-block; max-width:320px; width:100%">
+                            style="text-decoration: none; background-color:rgb(255, 255, 255); color:rgb(52, 52, 52); text-transform:uppercase; font-weight:600; border:none; border-radius:9999px; padding:8px 28px; margin-top:24px; display:inline-block; max-width:320px; width:100%">
                             Earn with ODT Now!
                         </a>
                     </td>
