--- a/email-templates/wire instructions email.html
+++ b/email-templates/wire instructions email.html
@@ -39,7 +39,7 @@
                 font-size: 44px !important
             }
             .responsive-text-image {
-                width: 50%;
+                width: 60%;
             }
         }
 
@@ -66,6 +66,10 @@
             margin: 0 auto;
             box-sizing: border-box;
         }
+
+        a {
+            cursor: pointer;
+        }
     </style>
 
 
@@ -80,7 +84,7 @@
                     <img style="width: 80%; margin-bottom: 64px;" src="https://i.imgur.com/WqmO3B1.png" alt=""
                         style="display:block; margin:0 auto; max-width:100%">
 
-                    <img class="responsive-text-image" src="https://imgur.com/erbdy8u.png" alt="">
+                    <img class="responsive-text-image" src="https://i.imgur.com/9WSDfGc.png" alt="">
                     <h1 class="responsive-text" style="color:rgb(221, 184, 66)">${Contacts.Lead Source}</h1></h1>
                 </td>
             </tr>
